# lexical_analysis_pascal

./: CMakeLists.txt  README.md  ReadKeywords.h  ToUpper.h  TokenStructure.h  checkNumeric.h  extractWordsWithIndex.h  findAllOccurances.h  findFunctions.h  main.cpp  repository.h
utils/: ReadKeywords.h  checkNumeric.h  checkTypeOfToken.h  replaceAll.h  splitBasedOnDelimiter.h  trimString.h
